adding skeletong of book endpoints
